removed fixed height for the item cards so that there is no overflow scroll vertically

--- a/client/src/components/ResultsAll.scss
+++ b/client/src/components/ResultsAll.scss
@@ -8,7 +8,6 @@
 	overflow-x: hidden;
 	&__box {
 		display: flex;
-		height: 30rem;
 		margin-right: 2rem;
 		width: 96vw;
 		overflow-x: scroll;
